--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,17 +1,17 @@
-:concurrency: 5
-:max_retries: 3
+:concurrency: <%= ENV.fetch("SIDEKIQ_CONCURRENCY", 5) %>
 :timeout: 8
+:max_retries: 3
 
 :queues:
-  - [critical, 2]
-  - [default, 1]
+  - [critical, 3]
+  - [default, 2]
   - [low, 1]
 
 development:
-  :concurrency: 5
+  :concurrency: 2
 
 staging:
-  :concurrency: 10
+  :concurrency: 3
 
 production:
-  :concurrency: 20 
+  :concurrency: <%= ENV.fetch("SIDEKIQ_CONCURRENCY", 10) %> 
